kuber-homeworks_2.3/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiapp
  template:
    metadata:
      labels:
        app: multiapp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
          - containerPort: 8080
            name: http-port
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
