kuber-homeworks_2.3/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-23
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
      app: multiapp
