kuber-homeworks_2.3/app/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-23
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-23
            port:
              number: 80
  tls:
    - hosts:
      - localhost
      secretName: tls-secret
